# telegram-quoute-generator

./: .env.example  .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
app/cfg/: settings.py
app/quote_module/: quote.py
app/quote_module/models/: quote_model.py
app/utils/: get_user_avatar.py
app/utils/logger/: logger.py
app/utils/result/: result.py
docker/: Dockerfile  docker-compose.yml
